--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ target/
 .project
 .settings/org.eclipse.jdt.apt.core.prefs
 .settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.m2e.core.prefs
